# ProposedNetwork

./: CMakeLists.txt  Readme.md
cmake/: ProtoBuf.cmake
docs/: README.md
evaluation/: CMakeLists.txt  resnet50_testing.prototxt
evaluation/sources/: test.cpp  test.cpp.autosave
models/resnet_101/: resnet_101.prototxt  resnet_101.prototxt~  solver_stowing_test_101.prototxt~
models/resnet_50/: resnet_50.prototxt  resnet_50.prototxt~  solver_stowing_test.prototxt~  solver_stowing_test_50.prototxt
models/txt_files/: train_arc.txt  train_arc.txt~  val_arc.txt  val_arc.txt~
python/: _python_confmat_iou_fail.py  python_confmat.py  requirements.txt
python/caffe/: python_confmat.py~
src/caffe/: solver.cpp
